added photos and video.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <!-- Header Section -->
 
     <header>
-      <img>
+      <img src="resources/assets/images/ic-logo.svg">
       <h1>Colmar Academy</h1>
       <nav>
         <ul>
@@ -24,7 +24,7 @@
 <!-- Learn Something Section -->
 
     <section>
-      <img>
+      <img src="resources/assets/images/banner.jpg">
       <h1>Learn something new everyday</h1>
       <h3>Every day's a school day for our brilliant, good-looking, charming students.</h3>
       <p>Start Here</p>
@@ -34,26 +34,26 @@
 
     <section>
       <div>
-        <img>
+        <img src="resources/assets/images/information-main.jpg">
         <h1>It doesn't hurt to keep practicing</h1>
         <p>"I'm telling you, going to Colmar was the best thing I ever did. I studied there, and now I have a really totally amazing job. I have also become slightly funnier at dinner parties and I spend 94% of my time in a zen-like state of calm."</p>
         <span>Emanuel, Sr Strategist at Hiring.com</span>
       </div>
       <div>
         <div>
-          <img>
+          <img src="resources/assets/images/information-orientation.jpg">
           <h3>Orientation Date</h3>
           <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
           <a>Read More<a>
         </div>
         <div>
-          <img>
+          <img src="resources/assets/images/information-campus.jpg">
           <h3>Our Campus</h3>
           <p>Find which campus is close by you</p>
           <a>Read More<a>
         </div>
         <div>
-          <img>
+          <img src="resources/assets/images/information-guest-lecture.jpg">
           <h3>Our Guest Lecture</h3>
           <p>Join a keynote with Graeme Douglas about managing organisational change</p>
           <a>Read More<a>
@@ -68,33 +68,37 @@
         <h1>Start Learning</h1>
       </div>
       <div>
-        <img>
+        <img src="resources/assets/images/course-software.jpg">
         <h3>Software Engeneering</h3>
         <p>COURSES</p>
         <p>Web Development, Mobile Development, iOT, APIs</p>
       </div>
       <div>
-        <img>
+        <img src="resources/assets/images/course-computer-art.jpg">
         <h3>Computer Art</h3>
         <p>COURSES</p>
         <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
       </div>
       <div>
+        <img src="resources/assets/images/course-design.jpg">
         <h3>Design</h3>
         <p>COURSES</p>
         <p>User Experience Design, User Research, Visual Design</p>
       </div>
       <div>
+        <img src="resources/assets/images/course-data.jpg">
         <h3>Data</h3>
         <p>COURSES</p>
         <p>Data Science, Big Data, SQL, Data Visualization</p>
       </div>
       <div>
+        <img src="resources/assets/images/course-business.jpg">
         <h3>Business</h3>
         <p>COURSES</p>
         <p>Product Development, Business Development, Startup</p>
       </div>
       <div>
+        <img src="resources/assets/images/course-marketing.jpg">
         <h3>Marketing</h3>
         <p>COURSES</p>
         <p>Analytics, Content Marketing, Mobile Marketing</p>
@@ -108,17 +112,17 @@
         <h1>Thesis Exhibit</h1>
       </div>
       <div>
-        <img>
+        <video src="resources/assets/videos/thesis.mp4">
         <h3>Reimagine Urban</h3>
         <p>"If you study here, you too could learn how to use words like 'reimagine' with a straight face."</p>
       </div>
       <div>
-        <img>
+        <img src="resources/assets/images/thesis-fisma.jpg">
         <h3>Fisma: Design and Prototype</h3>
         <p>Designer showcase of new prototype product</p>
       </div>
       <div>
-        <img>
+        <img src="resources/assets/images/thesis-now-and-then.jpg">
         <h3>Now and Then</h3>
         <p>Research study about New York</p>
       </div>
@@ -127,7 +131,7 @@
 <!-- Footer Section -->
 
     <footer>
-      <span>Research study about New York</span>
+      <span> &copy; 2016 Colmar Academy. All rights reserved</span>
       <span>Terms</span>
       <span>Privacy</span>
     </footer>
