--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 
     <header>
       <img src="resources/assets/images/ic-logo.svg">
-      <h1>Colmar Academy</h1>
+      <div class="title">
+        <span>COLMAR</span>
+        <span class="academy">ACADEMY</span>
+      </div>
+
       <nav>
         <ul>
           <li>On Campus</li>
@@ -23,12 +27,12 @@
 
 <!-- Learn Something Section -->
 
-    <section>
+    <main>
       <img src="resources/assets/images/banner.jpg">
       <h1>Learn something new everyday</h1>
       <h3>Every day's a school day for our brilliant, good-looking, charming students.</h3>
       <p>Start Here</p>
-    </section>
+    </main>
 
 <!-- Info Section -->
 
