Added banner css.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Colmar Academy</title>
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
   </head>
   <body>
 
@@ -14,7 +15,6 @@
         <span>COLMAR</span>
         <span class="academy">ACADEMY</span>
       </div>
-
       <nav>
         <ul>
           <li>On Campus</li>
@@ -25,13 +25,15 @@
       </nav>
     </header>
 
-<!-- Learn Something Section -->
+<!-- Banner Section -->
 
     <main>
       <img src="resources/assets/images/banner.jpg">
-      <h1>Learn something new everyday</h1>
-      <h3>Every day's a school day for our brilliant, good-looking, charming students.</h3>
-      <p>Start Here</p>
+      <div class="learn-text-box">
+        <h1 class="learn-something">Learn something new everyday</h1>
+        <h3 class="school-day">Every day's a school day for our brilliant, good-looking, charming students.</h3>
+        <p class="start-here">Start Here</p>
+      </div>
     </main>
 
 <!-- Info Section -->
