--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <img src="resources/assets/images/ic-logo.svg">
       <div class="title">
         <span>COLMAR</span>
-        <span class="academy">ACADEMY</span>
+        <span class="gold">ACADEMY</span>
       </div>
       <nav>
         <ul>
@@ -30,7 +30,7 @@
     <main>
       <img src="resources/assets/images/banner.jpg">
       <div class="learn-text-box">
-        <h1 class="learn-something">Learn something new everyday</h1>
+        <h1 class="gold">Learn something new everyday</h1>
         <h3 class="school-day">Every day's a school day for our brilliant, good-looking, charming students.</h3>
         <p class="start-here">Start Here</p>
       </div>
@@ -38,108 +38,129 @@
 
 <!-- Info Section -->
 
-    <section>
-      <div>
+    <section class="information-container">
+      <div class="information-main">
         <img src="resources/assets/images/information-main.jpg">
-        <h1>It doesn't hurt to keep practicing</h1>
+        <h2>It doesn't hurt to keep practicing</h2>
         <p>"I'm telling you, going to Colmar was the best thing I ever did. I studied there, and now I have a really totally amazing job. I have also become slightly funnier at dinner parties and I spend 94% of my time in a zen-like state of calm."</p>
         <span>Emanuel, Sr Strategist at Hiring.com</span>
       </div>
-      <div>
-        <div>
+      <div class="info-child-container">
+        <div class="info-box">
           <img src="resources/assets/images/information-orientation.jpg">
-          <h3>Orientation Date</h3>
-          <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-          <a>Read More<a>
+          <div class="info-text">
+            <h3>Orientation Date</h3>
+            <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+            <a>Read More</a>
+          </div>
         </div>
-        <div>
+        <div class="info-box">
           <img src="resources/assets/images/information-campus.jpg">
-          <h3>Our Campus</h3>
-          <p>Find which campus is close by you</p>
-          <a>Read More<a>
+          <div class="info-text">
+            <h3>Our Campus</h3>
+            <p>Find which campus is close by you</p>
+            <a>Read More</a>
+          </div>
         </div>
-        <div>
+        <div class="info-box">
           <img src="resources/assets/images/information-guest-lecture.jpg">
-          <h3>Our Guest Lecture</h3>
-          <p>Join a keynote with Graeme Douglas about managing organisational change</p>
-          <a>Read More<a>
+          <div class="info-text">
+            <h3>Our Guest Lecture</h3>
+            <p>Join a keynote with Graeme Douglas about managing organisational change</p>
+            <a>Read More</a>
+        </div>
         </div>
       </div>
     </section>
 
 <!-- Start Learning Section -->
 
-    <section>
-      <div>
-        <h1>Start Learning</h1>
-      </div>
-      <div>
-        <img src="resources/assets/images/course-software.jpg">
-        <h3>Software Engeneering</h3>
-        <p>COURSES</p>
-        <p>Web Development, Mobile Development, iOT, APIs</p>
-      </div>
-      <div>
-        <img src="resources/assets/images/course-computer-art.jpg">
-        <h3>Computer Art</h3>
-        <p>COURSES</p>
-        <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
-      </div>
-      <div>
-        <img src="resources/assets/images/course-design.jpg">
-        <h3>Design</h3>
-        <p>COURSES</p>
-        <p>User Experience Design, User Research, Visual Design</p>
-      </div>
-      <div>
-        <img src="resources/assets/images/course-data.jpg">
-        <h3>Data</h3>
-        <p>COURSES</p>
-        <p>Data Science, Big Data, SQL, Data Visualization</p>
-      </div>
-      <div>
-        <img src="resources/assets/images/course-business.jpg">
-        <h3>Business</h3>
-        <p>COURSES</p>
-        <p>Product Development, Business Development, Startup</p>
-      </div>
-      <div>
-        <img src="resources/assets/images/course-marketing.jpg">
-        <h3>Marketing</h3>
-        <p>COURSES</p>
-        <p>Analytics, Content Marketing, Mobile Marketing</p>
+    <section class="learning-container">
+
+      <h1 class="gold">Start Learning</h1>
+      <div class="course-parent">
+        <div class="course-child">
+          <img src="resources/assets/images/course-software.jpg">
+          <h3>Software Engineering</h3>
+          <p>COURSES</p>
+          <p>Web Development, Mobile Development, iOT, APIs</p>
+        </div>
+
+        <div class="course-child">
+          <img src="resources/assets/images/course-computer-art.jpg">
+          <h3>Computer Art</h3>
+          <p>COURSES</p>
+          <p>Imaging, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+        </div>
+
+        <div class="course-child">
+          <img src="resources/assets/images/course-design.jpg">
+          <h3>Design</h3>
+          <p>COURSES</p>
+          <p>User Experience Design, User Research, Visual Design</p>
+        </div>
+
+        <div class="course-child">
+          <img src="resources/assets/images/course-data.jpg">
+          <h3>Data</h3>
+          <p>COURSES</p>
+          <p>Data Science, Big Data, SQL, Data Visualization</p>
+        </div>
+
+        <div class="course-child">
+          <img src="resources/assets/images/course-business.jpg">
+          <h3>Business</h3>
+          <p>COURSES</p>
+          <p>Product Development, Business Development, Startup</p>
+        </div>
+
+        <div class="course-child">
+          <img src="resources/assets/images/course-marketing.jpg">
+          <h3>Marketing</h3>
+          <p>COURSES</p>
+          <p>Analytics, Content Marketing, Mobile Marketing</p>
+        </div>
       </div>
     </section>
 
 <!-- Thesis Exhibit Section -->
-
-    <section>
-      <div>
-        <h1>Thesis Exhibit</h1>
-      </div>
-      <div>
-        <video src="resources/assets/videos/thesis.mp4">
+      <h1 class="thesis-exhibit">Thesis Exhibit</h1>
+    <section class="thesis-container">
+      <div class="information-main">
+        <video width="100%" height="auto" controls>
+          <source src="resources/assets/videos/thesis.mp4" type="video/mp4">
+        </video>
         <h3>Reimagine Urban</h3>
         <p>"If you study here, you too could learn how to use words like 'reimagine' with a straight face."</p>
       </div>
-      <div>
-        <img src="resources/assets/images/thesis-fisma.jpg">
-        <h3>Fisma: Design and Prototype</h3>
-        <p>Designer showcase of new prototype product</p>
-      </div>
-      <div>
-        <img src="resources/assets/images/thesis-now-and-then.jpg">
-        <h3>Now and Then</h3>
-        <p>Research study about New York</p>
+      <div class="info-child-container">
+        <div class="info-box">
+          <img src="resources/assets/images/thesis-fisma.jpg">
+          <div class="info-text">
+            <h3>Fisma: Design and Prototype</h3>
+            <p>Designer showcase of new prototype product</p>
+          </div>
+        </div>
+        <div class="info-box">
+          <img src="resources/assets/images/thesis-now-and-then.jpg">
+          <div class="info-text">
+            <h3>Now and Then</h3>
+            <p>Research study about New York</p>
+          </div>
+        </div>
+        </div>
       </div>
     </section>
 
 <!-- Footer Section -->
 
     <footer>
-      <span> &copy; 2016 Colmar Academy. All rights reserved</span>
-      <span>Terms</span>
-      <span>Privacy</span>
+      <div>
+        <span> &copy; 2016 Colmar Academy. All rights reserved</span>
+      </div>
+      <div class="terms">
+        <span>Terms Privacy</span>
+      </div>
     </footer>
 
 
