--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="learn-text-box">
         <h1 class="gold">Learn something new everyday</h1>
         <h3 class="school-day">Every day's a school day for our brilliant, good-looking, charming students.</h3>
-        <p class="start-here">Start Here</p>
+        <p class="start-here" role="button">Start Here</p>
       </div>
     </main>
 
